--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "compileOnSave": false,
+  "compileOnSave": true,
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
@@ -13,12 +13,6 @@
     "resolveJsonModule":true,
     "esModuleInterop": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "types": [
-      "ckeditor__ckeditor5-build-classic"
-    ],
     "lib": [
       "es2018",
       "dom"
