--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "firebase": "^9.20.0",
     "firebaseui-angular": "^6.1.3",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.6.4",
     "materialize-css": "^1.0.0",
     "materialize-stepper": "^3.1.0",
