--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules/**
 .angular/**
 dist/base/**
+src/environments/**
 src/environments/environment.ts
-src/environments/environment.prod.ts
