--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "materialize-stepper": "^3.1.0",
     "ng-pipes": "^0.1.5",
     "ng2-animate-on-scroll": "^2.3.2",
+    "ngx-otp-input": "^1.1.0",
     "ngx-wig": "^15.1.4",
     "npm": "^9.6.5",
     "rxjs": "~7.8.0",
