--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve  --configuration development",
     "build": "ng build",
-    "deploy": "ng build && firebase deploy",
+    "deploy": "ng build && firebase deploy --only hosting --project buildaboard2018",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
